<resources>
    <string name="app_name">Been Love Memory</string>
    <string name="name_app">Been Love Memory</string>
    <string name="dev">DESIGN BY NGUYENTINH</string>
    <string name="version">App-v1.7</string>
    <string name="year">2018</string>
    <string name="set_name">Đổi tên</string>
    <string name="setDateLove">Đổi ngày yêu</string>
    <string name="setColor">Đổi màu</string>
    <string name="mauhong">Màu hồng</string>
    <string name="mautim">Màu tím</string>
    <string name="mauvang">Màu vàng</string>
    <string name="maunau">Màu nâu</string>
    <string name="thongbao">Thông báo</string>
    <string name="amnhac">Âm nhạc</string>
    <string name="cuasonoi">Cửa sổ nổi</string>
    <string name="donghotinhyeu">Đồng hồ tình yêu</string>
    <string name="matkhau">Mật khẩu</string>
    <string name="thoat">Thoát</string>
    <string name="sinhnhat">Sinh nhật</string>
    <string name="mauchu">Màu chữ</string>
    <string name="fontchu">Font chữ</string>
    <string name="maunen">Màu nền</string>
    <string name="age">21</string>
    <string name="hanhphuc">Hạnh Phúc</string>
    <string name="name">Nick name</string>
    <string name="cung">Hoàng đạo</string>
    <string name="tennam">Tên bạn nam</string>
    <string name="tennu">Tên bạn nữ</string>
    <string name="tao">Tạo</string>
    <string name="ngayyeu">Ngày yêu</string>
    <string name="error">Không được để trống</string>
    <string name="errora">Chưa yêu mà đã tính ngày rồi</string>
    <string name="date">10-10-2018</string>
    <string name="date_love">Đang yêu</string>
    <string name="ngay">Ngày</string>
    <string name="maudo">Màu đỏ</string>
    <string name="mauxanh">Màu xanh</string>
    <string name="mauhong1">Màu xanh 1</string>
    <string name="maudo1">Màu đỏ 1</string>
    <string name="birthday">Cập nhật ngày sinh</string>
    <string name="cung1">-</string>
    <string name="hinhnen">Hình nền</string>
    <string name="doiten">Thay đổi tên</string>
    <string name="error2">Tối đa 10 kí tự</string>
    <string name="doingayyeu">Ngày yêu nhau</string>
    <string name="error3">Chưa yêu đã tính rồi</string>
    <string name="ok">OK</string>
    <string name="error4">Tối đa 20 kí tự</string>
    <string name="kiniem">Kỉ niệm muốn ghi lại</string>
    <string name="chonngay">Chọn ngày</string>
    <string name="them">Thêm</string>
    <string name="error1">Tối đa 80 kí tự</string>
    <string name="xoa">Xóa</string>
    <string name="chuki">#demngayyeu_beenlovememory</string>

</resources>
