<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashScreen"
    android:background="@color/d81b60">

    <ImageView
        android:id="@+id/img_splashscreen"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:src="@drawable/ic_love_splashscreen" />

    <TextView
        android:layout_marginTop="10dp"
        android:visibility="invisible"
        android:id="@+id/txt_app_name"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_splashscreen"
        android:text="@string/name_app"/>

    <TextView

        android:id="@+id/year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/txt_app_name"
        android:layout_alignParentTop="true"
        android:layout_marginTop="210dp"
        android:text="@string/year"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        android:visibility="invisible" />

    <TextView
        android:visibility="invisible"
        android:textSize="22dp"
        android:textStyle="bold"
        android:id="@+id/dev"
        android:layout_below="@id/txt_app_name"
        android:textColor="@color/white" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/dev"/>

    <ProgressBar
        style="@style/ProgressBar"
        android:theme="@style/ProgressBar"
        android:progressBackgroundTint="@color/white"
        android:progressTint="@color/white"
        android:id="@+id/pro"
        android:visibility="invisible"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:progressBackgroundTintMode="@color/white"/>


</RelativeLayout>