<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<TextView
    android:layout_marginTop="30dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/name_app"
    android:textColor="@color/white"
    android:gravity="center_horizontal"
    android:layout_centerHorizontal="true"
    android:textStyle="bold"
    android:textSize="40sp"
    android:id="@+id/txt_app_name"/>


<me.itangqi.waveloadingview.WaveLoadingView
    android:id="@+id/loaddingWave"
    android:layout_width="230dp"
    android:layout_height="230dp"
    android:layout_centerHorizontal="true"
    android:layout_below="@id/txt_app_name"
    android:layout_marginTop="50dp"
    app:wlv_borderColor="@color/d81b60"
    app:wlv_borderWidth="0.3dp"
    app:wlv_progressValue="20"
    app:wlv_shapeType="circle"
    app:wlv_round_rectangle="true"
    app:wlv_triangle_direction="north"
    app:wlv_waveColor="@color/d81b60"
    >

</me.itangqi.waveloadingview.WaveLoadingView>
    <RelativeLayout
        android:layout_width="230dp"
        android:layout_height="230dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/txt_app_name"
        android:layout_marginTop="50dp"
        >
        <TextView
            android:id="@+id/txtTopwawe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/date_love"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            />
        <TextView

            android:textStyle="bold"
            android:id="@+id/txtCenterwawe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:text="@string/date"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            />
        <TextView
            android:textStyle="bold"
            android:id="@+id/txtBottomwawe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/ngay"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"/>

    </RelativeLayout>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_alignParentBottom="true"
       android:layout_height="wrap_content"
       android:orientation="vertical">

           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="250dp">

               <LinearLayout
                   android:layout_alignParentTop="true"
                   android:layout_marginTop="10dp"
                   android:id="@+id/linearLayout"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal">

                   <LinearLayout
                       android:gravity="center_horizontal"
                       android:layout_weight="1"
                       android:layout_width="0dp"
                       android:layout_height="match_parent">

                       <RelativeLayout
                           android:layout_gravity="center_vertical"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content">

                           <com.mikhaellopez.circularimageview.CircularImageView
                               android:id="@+id/imgBoy"
                               android:layout_width="90dp"
                               android:layout_height="90dp"
                               android:layout_gravity="center_vertical"
                               android:gravity="center"
                               android:scaleType="centerCrop"
                               android:src="@drawable/background"
                               app:civ_border="false"

                                />
                           <ProgressBar
                               android:id="@+id/pro1"
                               android:layout_width="30dp"
                               android:layout_height="30dp"
                               android:layout_centerInParent="true"/>
                       </RelativeLayout>

                   </LinearLayout>

                   <LinearLayout
                       android:layout_gravity="center_vertical"
                       android:gravity="center_horizontal"
                       android:layout_weight="0.5"
                       android:layout_width="0dp"
                       android:layout_height="100dp"
                       android:orientation="vertical">
                       <ImageView
                           android:id="@+id/love"
                           android:layout_width="45dp"
                           android:layout_height="45dp"
                           android:src="@drawable/love7"/>

                       <TextView
                           android:id="@+id/txtHanhPhuc"
                           android:gravity="center_horizontal"
                           android:layout_gravity="center_horizontal"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:textSize="16sp"
                           android:text="@string/hanhphuc"
                           android:textColor="@color/white"
                           android:textStyle="bold"
                           tools:ignore="HardcodedText" />

                   </LinearLayout>


                   <LinearLayout
                       android:gravity="center_horizontal"
                       android:layout_weight="1"
                       android:layout_width="0dp"
                       android:layout_height="match_parent">
                       <RelativeLayout
                           android:layout_gravity="center_vertical"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content">
                           <com.mikhaellopez.circularimageview.CircularImageView
                               android:id="@+id/imgGirl"
                               android:layout_width="90dp"
                               android:layout_height="90dp"
                               android:layout_gravity="center_vertical"
                               android:gravity="center"
                               android:scaleType="centerCrop"
                               android:src="@drawable/background"
                               app:civ_border="false"

                                />

                           <ProgressBar
                               android:id="@+id/pro2"
                               android:layout_width="30dp"
                               android:layout_height="30dp"
                               android:layout_centerInParent="true"/>
                       </RelativeLayout>


                   </LinearLayout>

               </LinearLayout>

               <LinearLayout

                   android:id="@+id/li"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_alignParentBottom="true"
                   android:layout_alignParentStart="true"
                   android:layout_marginBottom="84dp"
                   android:orientation="horizontal">

                   <TextView
                       android:id="@+id/txtNameBoy"
                       android:layout_width="0dp"
                       android:layout_height="wrap_content"
                       android:layout_marginBottom="10dp"
                       android:layout_weight="1"
                       android:gravity="center_horizontal"
                       android:text="@string/name"
                       android:textColor="@color/white"
                       android:textSize="27sp"
                       android:textStyle="bold"
                       tools:ignore="HardcodedText" />

                   <TextView
                       android:layout_width="0dp"
                       android:layout_height="wrap_content"
                       android:layout_weight="0.5" />

                   <TextView
                       android:id="@+id/txtNameGirl"
                       android:layout_width="0dp"
                       android:layout_height="wrap_content"
                       android:layout_alignParentRight="true"
                       android:layout_marginBottom="10dp"
                       android:layout_weight="1"
                       android:gravity="center_horizontal"
                       android:text="@string/name"
                       android:textColor="@color/white"
                       android:textSize="27sp"
                       android:textStyle="bold"
                       tools:ignore="HardcodedText" />
               </LinearLayout>

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_alignParentBottom="true"
                   android:layout_marginBottom="30dp">

                   <LinearLayout
                       android:layout_width="0dp"
                       android:layout_height="wrap_content"
                       android:layout_weight="1"
                       android:orientation="horizontal"
                       android:gravity="center"
                       android:layout_gravity="center_vertical">

                       <RelativeLayout
                           android:id="@+id/card_1"
                           android:layout_gravity="center_horizontal"
                           android:layout_width="40dp"
                           android:layout_height="40dp"
                           android:background="@drawable/style1">
                           <LinearLayout
                               android:layout_centerInParent="true"
                               android:layout_gravity="center_horizontal"
                               android:layout_width="wrap_content"
                               android:layout_height="match_parent"
                               android:gravity="center_vertical"
                               android:orientation="horizontal">

                               <ImageView
                                   android:layout_width="20sp"
                                   android:layout_height="20sp"
                                   android:src="@drawable/boy" />

                               <TextView
                                   android:id="@+id/txtAgeBoy"
                                   android:layout_width="wrap_content"
                                   android:layout_height="wrap_content"
                                   android:text="@string/age"
                                   android:textColor="@color/white"
                                   android:textSize="8sp"
                                   android:textStyle="bold"
                                   tools:ignore="HardcodedText" />

                           </LinearLayout>

                       </RelativeLayout>

                       <RelativeLayout
                           android:id="@+id/card_2"
                           android:layout_gravity="center_horizontal"
                           android:layout_marginLeft="2dp"
                           android:layout_width="80dp"
                           android:layout_height="40dp"
                           android:background="@drawable/style1">

                           <TextView
                               android:layout_marginLeft="5dp"
                               android:id="@+id/cung1"
                               android:textColor="@color/white"
                               android:textStyle="bold"
                               android:textSize="18sp"
                               android:layout_centerInParent="true"
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:text="@string/cung1"/>

                       </RelativeLayout>

                   </LinearLayout>


                   <LinearLayout
                       android:layout_width="0dp"
                       android:layout_height="wrap_content"
                       android:layout_weight="0.5">
                   </LinearLayout>


                   <LinearLayout
                       android:layout_width="0dp"
                       android:layout_height="wrap_content"
                       android:layout_weight="1">
                       <LinearLayout
                           android:layout_width="0dp"
                           android:layout_height="wrap_content"
                           android:layout_weight="1"
                           android:orientation="horizontal"
                           android:gravity="center"
                           android:layout_gravity="center_vertical">

                           <RelativeLayout
                               android:id="@+id/card_3"
                               android:layout_gravity="center_horizontal"
                               android:layout_width="40dp"
                               android:layout_height="40dp"
                               android:background="@drawable/style1"
                               >
                               <LinearLayout
                                   android:layout_centerInParent="true"
                                   android:layout_gravity="center_horizontal"
                                   android:layout_width="wrap_content"
                                   android:layout_height="match_parent"
                                   android:gravity="center_vertical"
                                   android:orientation="horizontal">

                                   <ImageView
                                       android:layout_width="20sp"
                                       android:layout_height="20sp"
                                       android:src="@drawable/girl" />

                                   <TextView
                                       android:id="@+id/txtAgeGirl"
                                       android:layout_width="wrap_content"
                                       android:layout_height="wrap_content"
                                       android:text="@string/age"
                                       android:textColor="@color/white"
                                       android:textSize="8sp"
                                       android:textStyle="bold"
                                       tools:ignore="HardcodedText" />

                               </LinearLayout>

                           </RelativeLayout>

                           <RelativeLayout
                               android:id="@+id/card_4"
                               android:background="@drawable/style1"
                               android:layout_gravity="center_horizontal"
                               android:layout_marginLeft="2dp"
                               android:layout_width="80dp"
                               android:layout_height="40dp"
                               >

                               <TextView

                                   android:layout_centerInParent="true"
                                   android:id="@+id/cung2"
                                   android:textColor="@color/white"
                                   android:textStyle="bold"
                                   android:textSize="18sp"
                                   android:layout_width="wrap_content"
                                   android:layout_height="wrap_content"
                                   android:text="@string/cung1"/>

                           </RelativeLayout>

                       </LinearLayout>
                   </LinearLayout>

               </LinearLayout>


           </RelativeLayout>
   </LinearLayout>


</RelativeLayout>